--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - fix/release
 
 jobs:
   release:
@@ -14,10 +15,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # - name: Set up Git
-      #   run: |
-      #     git config --global user.name 'GitHub Actions'
-      #     git config --global user.email 'actions@github.com'
+      - name: Set up Git
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git remote set-url origin "https://$GH_TOKEN@github.com/FathAllaTechOps/saml-auth.git"
+
 
       - name: Get latest release version
         id: get_version
