--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,21 +26,11 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Get release asset
-        id: get_asset
-        run: |
-          echo ${{ steps.create_release.outputs.upload_url }}
-          asset_url=$(jq -r '.upload_url' <<< "${{ steps.create_release.outputs.upload_url }}")
-          asset_url="${asset_url%\{*}"
-          echo "asset_url=$asset_url"  >> $GITHUB_OUTPUT
-
       - name: Calculate SHA256 checksum
         id: calculate_sha256
         run: |
-          echo ${{ steps.get_asset.outputs.asset_url }}
-          asset_url="${{ steps.get_asset.outputs.asset_url }}?name=saml-auth.tar.gz"
-          wget -qO- $asset_url | shasum -a 256 | cut -d' ' -f1 > sha256.txt
-          cat sha256.txt 
+          curl -L -o saml-auth-${{ github.event.inputs.version }}.tar.gz https://github.com/FathAllaTechOps/saml-auth/archive/${{ github.event.inputs.version }}.tar.gz
+          shasum -a 256 saml-auth-${{ github.event.inputs.version }}.tar.gz
 
       # - name: Update Homebrew formula
       #   uses: actions/upload-artifact@v4
